hphp/test/zend/bad/ext/gd/tests/bug39780_extern.php
<?php

$im = imagecreatefrompng(dirname(__FILE__) . '/bug39780.png');
var_dump($im);
?>